# ImageDeal

./: LICENSE  README.md
ImageDeal/: CMakeLists.txt  ImageDeal.sln  ImageDeal.vcxproj  ImageDeal.vcxproj.filters  config.h.in
ImageDeal/include/: BaseMath.h  BeautyCamera.h  ColorConver.h  ColorSkin.h  FindImageEdge.h  FindSkin.h  GrindSkin.h  ImageDeal.h  ImageFilter.h  ImageSharpen.h  ImageSpecialEffects.h  common.h
ImageDeal/src/: BaseMath.cpp  BeautyCamera.cpp  ColorConver.cpp  ColorSkin.cpp  Common.cpp  DealImage.cpp  FindImageEdge.cpp  FindSkin.cpp  GrindSkin.cpp  ImageBaseAlgorithm.cpp  ImageFilter.cpp  ImageSharpen.cpp  ImageSpecialEffects.cpp
ImageDeal/x64/LIB/: ImageDeal.lib
